# GenBitIndex

./: README.md
HE/Client/: CMakeLists.txt  main.cpp
HE/Client/inc/: ThreadPool.h  session.h  task.h  util.h
HE/Client/src/: CMakeLists.txt  session.cpp  util.cpp
HE/Sever/: CMakeLists.txt  main.cpp
HE/Sever/inc/: session.h  util.h
HE/Sever/src/: session.cpp  task.cpp  util.cpp
